# Symbolic

./: .cproject  .gitignore  .project  ANALYSIS_INDEX.md  CMakeLists.txt  COMPLETE_CODE_SNIPPETS.md  DETAILED_ANALYSIS.md  QUICK_REFERENCE.md  Symbolic.cpp  Symbolic_playground.cpp  Symbolic_tests.cpp  agent.md  lint_test.sh
.github/: copilot-instructions.md
.github/workflows/: cmake-single-platform.yml
SymbolicMethod/: labelled_symbolic.hpp  unlabelled_symbolic.hpp
_codeql_build_dir/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  Symbolic  Symbolic_playground  Symbolic_tests  cmake_install.cmake
cpp_utils/: unused.hpp
examples/: bf_interpreter.sym  dummy.sym  euclidean_algorithm.sym  fibonacci.sym  fizzbuzz.sym  graph_isomorphisms.hpp  less_naive_prime_counting.sym  naive_prime_counting.sym  prime_sieve.py  prime_sieve.sym
examples/lib/: prime_check_naive.sym
exceptions/: eval_exception.hpp  invalid_function_arg_exception.hpp  parsing_exceptions.hpp  parsing_type_exception.hpp  unreachable_exception.hpp
functions/: power_series_functions.cpp  power_series_functions.hpp
include/common/: common_datatypes.hpp  file_location.hpp  lexer_deque.hpp  subset_parser.hpp
include/cpp_utils/: unused.hpp
include/examples/: graph_isomorphisms.hpp
include/exceptions/: datatype_internal_exception.hpp  eval_exception.hpp  invalid_function_arg_exception.hpp  parsing_exceptions.hpp  parsing_type_exception.hpp  unreachable_exception.hpp
include/functions/: power_series_functions.hpp
include/interpreter/: context.hpp
include/interpreter/polish_notation/: polish.hpp  polish_base_math.hpp  polish_boolean_operators.hpp  polish_comparison_operators.hpp  polish_control_flow.hpp  polish_dict.hpp  polish_function_core.hpp  polish_functions.hpp  polish_list.hpp  polish_utils.hpp
include/math/number_theory/: euler_phi.hpp  moebius.hpp
include/math/power_series/: power_series_functions.hpp
include/math_utils/: binomial_generator.hpp  euclidean_algorithm.hpp  factorial_generator.hpp
include/modules/: module_factory.hpp
include/modules/builtins/: module_builtins.hpp
include/modules/combinatorics/: module_combinatorics.hpp
include/modules/math/: module_math.hpp
include/modules/module_registration/: module_registration.hpp
include/modules/powerseries/: module_powerseries.hpp
include/modules/string/: module_string.hpp
include/number_theory/: euler_phi.hpp  moebius.hpp
include/options/: cmd_line_options.hpp
include/parsing/: sym_object.hpp
include/parsing/expression_parsing/: lexer_types.hpp  math_expression_parser.hpp  math_lexer.hpp  parsed_code_element.hpp  parsing_wrapper.hpp  shunting_yard.hpp
include/parsing/math_types/: power_series_type.hpp  rational_function_type.hpp  value_type.hpp
include/parsing/polish_notation/: polish.hpp  polish_base_math.hpp  polish_comparison_operators.hpp  polish_control_flow.hpp  polish_function_core.hpp  polish_functions.hpp  polish_notation.hpp  polish_utils.hpp
include/parsing/subset_parsing/: subset_parser.hpp
include/polya/: cycle_index.hpp
include/preprocessor/: preprocess.hpp
include/shell/: command_handling.hpp  formula_parsing_result.hpp  shell.hpp
include/shell/options/: cmd_line_options.hpp
include/shell/parameters/: parameters.hpp
include/string_utils/: string_utils.hpp
include/symbolic_method/: labelled_symbolic.hpp  symbolic_method_core.hpp  unlabelled_symbolic.hpp
include/test/test_data/: power_series_parsing_testdata.hpp
include/types/: bigint.hpp  equality_checker.hpp  modLong.hpp  poly_base.hpp  polynomial.hpp  power_series.hpp  rationals.hpp  ring_helpers.hpp
include/types/sym_types/: sym_boolean.hpp  sym_dict.hpp  sym_list.hpp  sym_math.hpp  sym_math_object.hpp  sym_object.hpp  sym_string_object.hpp  sym_void.hpp
math_utils/: binomial_generator.hpp  euclidean_algorithm.hpp  factorial_generator.hpp
numberTheory/: euler_phi.cpp  euler_phi.hpp  moebius.cpp  moebius.hpp
number_theory/: moebius.cpp
parsing/expression_evaluation/: expression_evaluation.cpp  expression_evaluation.hpp
parsing/expression_parsing/: math_expression_parser.cpp  math_expression_parser.hpp  math_lexer.cpp  math_lexer.hpp  parsing_exceptions.hpp  parsing_wrapper.hpp  shunting_yard.cpp  shunting_yard.hpp
parsing/polish_notation/: polish_notation.hpp
parsing/subset_parsing/: subset_parser.hpp
polya/: cycle_index.hpp  partitions.cpp  partitions.hpp
src/: Symbolic.cpp  Symbolic_playground.cpp  Symbolic_tests.cpp
src/common/: common_datatypes.cpp
src/functions/: power_series_functions.cpp
src/interpreter/: context.cpp
src/interpreter/polish_notation/: polish_core.cpp
src/math/number_theory/: euler_phi.cpp
src/math/power_series/: power_series_functions.cpp
src/modules/: module_factory.cpp
src/modules/builtins/: module_builtins.cpp
src/modules/combinatorics/: module_combinatorics.cpp
src/modules/math/: module_math.cpp
src/modules/module_registration/: module_registration.cpp
src/modules/powerseries/: module_powerseries.cpp
src/modules/string/: module_string.cpp
src/number_theory/: euler_phi.cpp  moebius.cpp
src/options/: cmd_line_options.cpp
src/parsing/expression_parsing/: math_expression_parser.cpp  math_lexer.cpp  shunting_yard.cpp
src/parsing/polish_notation/: polish_core.cpp
src/polya/: partitions.cpp
src/preprocessor/: preprocess.cpp
src/shell/: command_handling.cpp  shell.cpp
src/shell/options/: cmd_line_options.cpp
src/shell/parameters/: parameters.cpp
src/string_utils/: string_utils.cpp
src/test/interpreter/: context_tests.cpp
src/test/modules/: module_constants_tests.cpp
src/test/options/: test_options.cpp
string_utils/: string_utils.cpp  string_utils.hpp
test/parsing/: equality_checker.hpp  test_power_series_parsing.cpp  test_power_series_parsing.hpp  test_rational_function_parsing.cpp  test_value_parsing.cpp
test/types/: bigint_tests.cpp  modlong_tests.cpp  polynomial_tests.cpp
types/: bigint.hpp  modLong.hpp  poly_base.hpp  polynomial.hpp  power_series.hpp  rationals.hpp  ring_helpers.hpp
(+77 files in other folders)
